RESOLVED FIXED93323
BindingSecurity::shouldAllowAccessToFrame shouldn't use a raw boolean parameter
https://bugs.webkit.org/show_bug.cgi?id=93323
Summary BindingSecurity::shouldAllowAccessToFrame shouldn't use a raw boolean parameter
Adam Barth
Reported 2012-08-06 19:16:13 PDT
BindingSecurity::shouldAllowAccessToFrame shouldn't use a raw boolean parameter
Attachments
Patch (20.87 KB, patch)
2012-08-06 19:17 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-08-06 19:17:14 PDT
Eric Seidel (no email)
Comment 2 2012-08-06 19:18:42 PDT
Comment on attachment 156831 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2012-08-06 21:08:26 PDT
Comment on attachment 156831 [details] Patch Clearing flags on attachment: 156831 Committed r124847: <http://trac.webkit.org/changeset/124847>
WebKit Review Bot
Comment 4 2012-08-06 21:08:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.