Source/WebCore/bindings/v8/custom/V8HistoryCustom.cpp
@@ -111,16 +111,14 @@ v8::Handle<v8::Value> V8History::replaceStateCallback(const v8::Arguments& args)
 
 bool V8History::indexedSecurityCheck(v8::Local<v8::Object> host, uint32_t index, v8::AccessType type, v8::Local<v8::Value>)
 {
-    // Only allow same origin access.
     History* history = V8History::toNative(host);
-    return BindingSecurity::canAccessFrame(BindingState::instance(), history->frame(), false);
+    return BindingSecurity::shouldAllowAccessToFrame(BindingState::instance(), history->frame(), DoNotReportSecurityError);
 }
 
 bool V8History::namedSecurityCheck(v8::Local<v8::Object> host, v8::Local<v8::Value> key, v8::AccessType type, v8::Local<v8::Value>)
 {
-    // Only allow same origin access.
     History* history = V8History::toNative(host);
-    return BindingSecurity::canAccessFrame(BindingState::instance(), history->frame(), false);
+    return BindingSecurity::shouldAllowAccessToFrame(BindingState::instance(), history->frame(), DoNotReportSecurityError);
 }
 
 } // namespace WebCore
